@@ -42,8 +42,8 @@ RSC=rc.exe
 # PROP Intermediate_Dir "Release"
 # PROP Ignore_Export_Lib 0
 # PROP Target_Dir ""
-# ADD BASE CPP /nologo /MT /W3 /GX /O2 /D "WIN32" /D "NDEBUG" /D "_CONSOLE" /D "MIKMOD_BUILD" /D "DLL_EXPORT" /D "DRV_DS" /D "DRV_WIN" /D "DRV_AIFF" /D "HAVE_LIMITS_H" /D "HAVE_FCNTL_H" /YX /FD /c
-# ADD CPP /nologo /MD /W3 /GX /O2 /I "..\..\win32" /I "..\..\include" /D "WIN32" /D "NDEBUG" /D "_CONSOLE" /D "MIKMOD_BUILD" /D "DLL_EXPORT" /D "DRV_DS" /D "DRV_WIN" /D "DRV_AIFF" /D "HAVE_LIMITS_H" /D "HAVE_FCNTL_H" /FD /c
+# ADD BASE CPP /nologo /MT /W3 /GX /O2 /D "WIN32" /D "NDEBUG" /D "_CONSOLE" /D "MIKMOD_BUILD" /D "DLL_EXPORT" /D "DRV_DS" /D "DRV_WIN" /D "DRV_AIFF" /D "DRV_WAV" /D "DRV_RAW" /D "HAVE_LIMITS_H" /D "HAVE_FCNTL_H" /YX /FD /c
+# ADD CPP /nologo /MD /W3 /GX /O2 /I "..\..\win32" /I "..\..\include" /D "WIN32" /D "NDEBUG" /D "_CONSOLE" /D "MIKMOD_BUILD" /D "DLL_EXPORT" /D "DRV_DS" /D "DRV_WIN" /D "DRV_AIFF" /D "DRV_WAV" /D "DRV_RAW" /D "HAVE_LIMITS_H" /D "HAVE_FCNTL_H" /FD /c
 # SUBTRACT CPP /YX
 # ADD BASE MTL /nologo /D "NDEBUG" /mktyplib203 /win32
 # ADD MTL /nologo /D "NDEBUG" /mktyplib203 /win32
@@ -70,8 +70,8 @@ LINK32=link.exe
 # PROP Intermediate_Dir "Debug"
 # PROP Ignore_Export_Lib 0
 # PROP Target_Dir ""
-# ADD BASE CPP /nologo /MTd /W3 /Gm /GX /ZI /Od /D "WIN32" /D "_DEBUG" /D "_CONSOLE" /D "MIKMOD_BUILD" /D "DLL_EXPORT" /D "DRV_DS" /D "DRV_WIN" /D "DRV_AIFF" /D "HAVE_LIMITS_H" /D "HAVE_FCNTL_H" /YX /FD /GZ /c
-# ADD CPP /nologo /MDd /W3 /Gm /GX /ZI /Od /I "..\..\win32" /I "..\..\include" /D "WIN32" /D "_DEBUG" /D "_CONSOLE" /D "MIKMOD_BUILD" /D "DLL_EXPORT" /D "DRV_DS" /D "DRV_WIN" /D "DRV_AIFF" /D "HAVE_LIMITS_H" /D "HAVE_FCNTL_H" /FD /GZ /c
+# ADD BASE CPP /nologo /MTd /W3 /Gm /GX /ZI /Od /D "WIN32" /D "_DEBUG" /D "_CONSOLE" /D "MIKMOD_BUILD" /D "DLL_EXPORT" /D "DRV_DS" /D "DRV_WIN" /D "DRV_AIFF" /D "DRV_WAV" /D "DRV_RAW" /D "HAVE_LIMITS_H" /D "HAVE_FCNTL_H" /YX /FD /GZ /c
+# ADD CPP /nologo /MDd /W3 /Gm /GX /ZI /Od /I "..\..\win32" /I "..\..\include" /D "WIN32" /D "_DEBUG" /D "_CONSOLE" /D "MIKMOD_BUILD" /D "DLL_EXPORT" /D "DRV_DS" /D "DRV_WIN" /D "DRV_AIFF" /D "DRV_WAV" /D "DRV_RAW" /D "HAVE_LIMITS_H" /D "HAVE_FCNTL_H" /FD /GZ /c
 # SUBTRACT CPP /YX
 # ADD BASE MTL /nologo /D "_DEBUG" /mktyplib203 /win32
 # ADD MTL /nologo /D "_DEBUG" /mktyplib203 /win32
