@@ -13,12 +13,13 @@ CC=lcc.exe
 LIB=lcclib.exe
 LINK=lcclnk.exe
 
+DRIVER_FLAGS= /DDRV_DS /DDRV_WIN /DDRV_AIFF /DDRV_WAV /DDRV_RAW
 # If you want to build a dynamic library, uncomment the following two lines
 # and comment the next two.
 #LIBS=$(DLLNAME)
-#CFLAGS= -A /DWIN32 /DMIKMOD_BUILD /DDLL_EXPORT /DDRV_DS /DDRV_WIN /DHAVE_FCNTL_H /DHAVE_MALLOC_H /DHAVE_LIMITS_H
+#CFLAGS= -A /DWIN32 /DMIKMOD_BUILD /DDLL_EXPORT /DHAVE_FCNTL_H /DHAVE_MALLOC_H /DHAVE_LIMITS_H $(DRIVER_FLAGS)
 LIBS=$(LIBSTATIC)
-CFLAGS= -A /DWIN32 /DMIKMOD_BUILD /DMIKMOD_STATIC /DDRV_DS /DDRV_WIN /DHAVE_FCNTL_H /DHAVE_MALLOC_H /DHAVE_LIMITS_H
+CFLAGS= -A /DWIN32 /DMIKMOD_BUILD /DMIKMOD_STATIC /DHAVE_FCNTL_H /DHAVE_MALLOC_H /DHAVE_LIMITS_H $(DRIVER_FLAGS)
 
 # Compile command
 COMPILE=$(CC) -errout=err.out $(CFLAGS) /I..\include /I.. /I..\win32
